﻿FIXES
	- Fix various NREs.
	- Remove null-coalescing operators from Monobehaviours as they don't work in Unity.

v1.4.2.3
FIXES
	- Fix the issue of player names in the remote orchestration containing the separator character.

v1.4.2.2
FIXES
	- Correct logic for checking if a weapon is powering down/disabled.
	- Actually use the modified team starting distance for teams.
IMPROVEMENTS
	General:
	- Allow configurable muzzleTransformName.
	- Trigger RemoveCometVessel on onCometSpawned instead of onNewVesselCreated.
	- Allow middle click individual 'T' icons to set neutral team.
	- Small optimisation in explosion book-keeping.
	- Increase maximum firing angle to 4 in both the weapon and the weapon manager.

	Kerbal Safety:
	- Ejection from cockpits and cabins is now working. Note: ejecting lots (>100) of kerbals simultaneously can cause KSP to freeze for several minutes.
	- Set random rotation and torque to ejected kerbals. Disable collisions while manually moving the EVA kerbal.
	- Let the Kraken eat kerbals that get invalid positions (NaN). Note: this doesn't appear to be an issue now due to the fix above.
	- Self-destruct action group for WM (helps with testing things).
	- Remove the kerbals' jetpacks to save 45kg.

	Parsing script:
	- Add default interpreter (for Linux) to parsing script.
	- Default to looking for the latest tournament folder.
	- Rearrange display order so that the 'Score' column is first after the 'Name' column
	- Fix check for default team names in summary
	- Only print teams summary if it's not 'A', 'B', ... as those aren't consistent.
	- Update formatting of tournament parser output to console for consistent column spacing.
	- Add various options to tournament parsing script (run with -h flag for help).
		-q Don't print results summary to console. (default: False)
		-n Don't create summary files. (default: False)
		-s Compute scores. (default: True)
		-so Only display the scores in the summary on the console. (default: False)