@@ -20,6 +20,7 @@ namespace BDArmory.Control
 
         // Interesting spawn locations on Kerbin.
         public static string spawnLocationsCfg = "GameData/BDArmory/spawn_locations.cfg";
+        [VesselSpawnerField] public static bool UpdateSpawnLocations = true;
         [VesselSpawnerField] public static List<SpawnLocation> spawnLocations;
 
         private string message;
