@@ -1,8 +1,5 @@
 ﻿using System;
 using System.Collections.Generic;
-using System.Reflection;
-using BDArmory.Core;
-using BDArmory.Control;
 using UniLinq;
 using UnityEngine;
 
@@ -39,6 +36,27 @@ namespace BDArmory.Control
             new SpawnLocation("Pyramids", new Vector2d(-6.4743, -141.662)),
             new SpawnLocation("Mtn. Springs", new Vector2d(30.6516, -40.6589)),
             new SpawnLocation("Src of deNile", new Vector2d(28.8112, -134.795)),
+            new SpawnLocation("Western Approach", new Vector2d(0.2, -84.26)),
+            new SpawnLocation("Suez", new Vector2d(10.955, -96.9358)),
+            new SpawnLocation("Penninsula", new Vector2d(-1.2664, -106.896)),
+            new SpawnLocation("Lonely Mt", new Vector2d(24.48, -116.444)),
+            new SpawnLocation("Mountain Bowl", new Vector2d(21.772, -112.569)),
+            new SpawnLocation("Oasis", new Vector2d(10.5383, -121.837)),
+            new SpawnLocation("White Cliffs", new Vector2d(25.689, -144.14)),
+            new SpawnLocation("Bowl 4", new Vector2d(-2.962, 179.91)),
+            new SpawnLocation("Crater Sea", new Vector2d(7.213, -177.34)),
+            new SpawnLocation("Crater Isle", new Vector2d(8.159, 179.65)),
+            new SpawnLocation("Marshlands", new Vector2d(16.83, -162.813)),
+            new SpawnLocation("Kermau-Sur-Mer", new Vector2d(33.911, -172.26)),
+            new SpawnLocation("Bowl 5", new Vector2d(47.16, 134.08)),
+            new SpawnLocation("Oyster Bay", new Vector2d(8.342, 85.613)),
+            new SpawnLocation("Alpine Lake", new Vector2d(-23.48, 119.83)),
+            new SpawnLocation("East Peninsula", new Vector2d(-1.57, -39.12)),
+            new SpawnLocation("Great Lake", new Vector2d(-31.958, 81.654)),
+            new SpawnLocation("Crater Lake", new Vector2d(-18.86, 66.47)),
+            new SpawnLocation("Land Bridge", new Vector2d(-48.055, 13.33)),
+            new SpawnLocation("The Scar", new Vector2d(16.88, 50.48)),
+            new SpawnLocation("Colorado", new Vector2d(41.715, 82.29)),
         };
 
         public static void Save()
@@ -47,23 +65,53 @@ namespace BDArmory.Control
             if (fileNode == null)
                 fileNode = new ConfigNode();
 
+            if (!fileNode.HasNode("Config"))
+                fileNode.AddNode("Config");
+
+            ConfigNode settings = fileNode.GetNode("Config");
+            foreach (var field in typeof(VesselSpawner).GetFields(System.Reflection.BindingFlags.Static | System.Reflection.BindingFlags.Public | System.Reflection.BindingFlags.DeclaredOnly))
+            {
+                if (field == null || !field.IsDefined(typeof(VesselSpawnerField), false)) continue;
+                if (field.Name == "spawnLocations") continue; // We'll do the spawn locations separately.
+                var fieldValue = field.GetValue(null);
+                settings.SetValue(field.Name, field.GetValue(null).ToString(), true);
+            }
+
             if (!fileNode.HasNode("BDASpawnLocations"))
                 fileNode.AddNode("BDASpawnLocations");
 
-            ConfigNode settings = fileNode.GetNode("BDASpawnLocations");
+            ConfigNode spawnLocations = fileNode.GetNode("BDASpawnLocations");
 
-            settings.ClearValues();
+            spawnLocations.ClearValues();
             foreach (var spawnLocation in VesselSpawner.spawnLocations)
-                settings.AddValue("LOCATION", spawnLocation.ToString());
+                spawnLocations.AddValue("LOCATION", spawnLocation.ToString());
 
             fileNode.Save(VesselSpawner.spawnLocationsCfg);
         }
 
         public static void Load()
         {
-            VesselSpawner.spawnLocations = new List<SpawnLocation>();
             ConfigNode fileNode = ConfigNode.Load(VesselSpawner.spawnLocationsCfg);
-            if (fileNode != null && fileNode.HasNode("BDASpawnLocations"))
+            if (fileNode == null) return;
+
+            if (fileNode.HasNode("Config"))
+            {
+                ConfigNode settings = fileNode.GetNode("Config");
+                foreach (var field in typeof(VesselSpawner).GetFields(System.Reflection.BindingFlags.Static | System.Reflection.BindingFlags.Public | System.Reflection.BindingFlags.DeclaredOnly))
+                {
+                    if (field == null || !field.IsDefined(typeof(VesselSpawnerField), false)) continue;
+                    if (field.Name == "spawnLocations") continue; // We'll do the spawn locations separately.
+                    if (!settings.HasValue(field.Name)) continue;
+                    object parsedValue = ParseValue(field.FieldType, settings.GetValue(field.Name));
+                    if (parsedValue != null)
+                    {
+                        field.SetValue(null, parsedValue);
+                    }
+                }
+            }
+
+            VesselSpawner.spawnLocations = new List<SpawnLocation>();
+            if (fileNode.HasNode("BDASpawnLocations"))
             {
                 ConfigNode settings = fileNode.GetNode("BDASpawnLocations");
                 foreach (var spawnLocation in settings.GetValues("LOCATION"))
@@ -75,11 +123,12 @@ namespace BDArmory.Control
                     }
                 }
             }
-            // Add defaults if nothing got loaded.
-            if (VesselSpawner.spawnLocations.Count == 0)
+            // Add defaults if they're missing.
+            if (VesselSpawner.UpdateSpawnLocations)
             {
-                Debug.Log("[VesselSpawnerField]: No locations found in config file, adding defaults.");
-                VesselSpawner.spawnLocations = defaultLocations.ToList();
+                foreach (var location in defaultLocations.ToList())
+                    if (!VesselSpawner.spawnLocations.Select(l => l.name).ToList().Contains(location.name))
+                        VesselSpawner.spawnLocations.Add(location);
             }
         }
 
@@ -90,6 +139,10 @@ namespace BDArmory.Control
                 if (type == typeof(string))
                 {
                     return value;
+                }
+                else if (type == typeof(bool))
+                {
+                    return Boolean.Parse(value);
                 }
                 else if (type == typeof(Vector2d))
                 {
